--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # default credentials - assuming that service is going to be deployed on EC2 for prod env
 quarkus.s3.aws.credentials.type=default
+quarkus.s3.aws.region=eu-central-1
 # static credentials - to override them in the QuarkusTestResourceLifecycleManager
 %test.quarkus.s3.aws.credentials.type=static
-%test.quarkus.s3.aws.region=eu-central-1
